Allow Yandex users to set local password
