# backend/light_task/src/users/router.py
@@ -11,7 +11,13 @@ from src.auth.dependencies import get_current_user
 from src.auth.schemas import UserPayload
 from src.s3 import S3Client, get_s3_client
 from src.users.dependencies import valid_avatar
-from src.users.schemas import UserCreate, UserRead, UserUpdate, UserPublic
+from src.users.schemas import (
+    UserCreate,
+    UserPasswordUpdate,
+    UserRead,
+    UserUpdate,
+    UserPublic,
+)
 from src.users.service import UserService, get_user_service
 
 router = APIRouter(prefix="/users", tags=["Users"])
@@ -23,46 +29,59 @@ router = APIRouter(prefix="/users", tags=["Users"])
     status_code=status.HTTP_201_CREATED,
 )
 async def create_user(
-        user_in: UserCreate,
-        user_service: Annotated[UserService, Depends(get_user_service)],
+    user_in: UserCreate,
+    user_service: Annotated[UserService, Depends(get_user_service)],
 ):
     return await user_service.create_user(user_in)
 
 
 @router.get("/me", response_model=UserRead)
 async def read_users_me(
-        current_user: Annotated[UserPayload, Depends(get_current_user)],
-        user_service: Annotated[UserService, Depends(get_user_service)],
+    current_user: Annotated[UserPayload, Depends(get_current_user)],
+    user_service: Annotated[UserService, Depends(get_user_service)],
 ):
     return await user_service.get_user_by_id(current_user.sub)
 
 
 @router.patch("/me", response_model=UserRead)
 async def update_user_me(
-        user_update: UserUpdate,
-        current_user: Annotated[UserPayload, Depends(get_current_user)],
-        user_service: Annotated[UserService, Depends(get_user_service)],
+    user_update: UserUpdate,
+    current_user: Annotated[UserPayload, Depends(get_current_user)],
+    user_service: Annotated[UserService, Depends(get_user_service)],
 ):
     user_db = await user_service.get_user_by_id(current_user.sub)
     return await user_service.update_user(user=user_db, user_update=user_update)
 
 
+@router.patch("/me/password", response_model=UserRead)
+async def update_user_password(
+    password_update: UserPasswordUpdate,
+    current_user: Annotated[UserPayload, Depends(get_current_user)],
+    user_service: Annotated[UserService, Depends(get_user_service)],
+):
+    user_db = await user_service.get_user_by_id(current_user.sub)
+    return await user_service.update_password(
+        user=user_db,
+        password_update=password_update,
+    )
+
+
 @router.get("/{user_id}", response_model=UserPublic)
 async def read_user_by_id(
-        user_id: int,
-        user_service: Annotated[UserService, Depends(get_user_service)],
-        _: Annotated[UserPayload, Depends(get_current_user)],
+    user_id: int,
+    user_service: Annotated[UserService, Depends(get_user_service)],
+    _: Annotated[UserPayload, Depends(get_current_user)],
 ):
     return await user_service.get_user_by_id(user_id)
 
 
 @router.post("/me/avatar", response_model=UserRead)
 async def upload_avatar(
-        file_data: Annotated[tuple[bytes, str, str], Depends(valid_avatar)],
-        current_user: Annotated[UserPayload, Depends(get_current_user)],
-        user_service: Annotated[UserService, Depends(get_user_service)],
-        s3_client: Annotated[S3Client, Depends(get_s3_client)],
-        bg_tasks: BackgroundTasks,
+    file_data: Annotated[tuple[bytes, str, str], Depends(valid_avatar)],
+    current_user: Annotated[UserPayload, Depends(get_current_user)],
+    user_service: Annotated[UserService, Depends(get_user_service)],
+    s3_client: Annotated[S3Client, Depends(get_s3_client)],
+    bg_tasks: BackgroundTasks,
 ):
     content, ext, mime = file_data
 
@@ -80,10 +99,10 @@ async def upload_avatar(
 
 @router.delete("/me/avatar", response_model=UserRead)
 async def delete_avatar(
-        current_user: Annotated[UserPayload, Depends(get_current_user)],
-        user_service: Annotated[UserService, Depends(get_user_service)],
-        s3_client: Annotated[S3Client, Depends(get_s3_client)],
-        bg_tasks: BackgroundTasks,
+    current_user: Annotated[UserPayload, Depends(get_current_user)],
+    user_service: Annotated[UserService, Depends(get_user_service)],
+    s3_client: Annotated[S3Client, Depends(get_s3_client)],
+    bg_tasks: BackgroundTasks,
 ):
     user_db = await user_service.get_user_by_id(current_user.sub)
 
